Trying to get fog to work ...

--- a/Simulator/Makefile
+++ b/Simulator/Makefile
@@ -12,18 +12,18 @@ CC = gcc
 
 
 SUBDIRS = aircraft controls flight scenery
-MAIN = gltk
+MAIN = OpenGL
 
 
 all:
 	for dir in $(SUBDIRS) $(MAIN); do \
-	    ( cd $$dir; make CC=$(CC) CFLAGS=$(CFLAGS) ) ; \
+	    ( cd $$dir; make CC=$(CC) ) ; \
 	done
 
 
 install:
 	for dir in $(SUBDIRS) $(MAIN); do \
-	    ( cd $$dir; make CC=$(CC) CFLAGS=$(CFLAGS) install) ; \
+	    ( cd $$dir; make CC=$(CC) install) ; \
 	done
 
 
@@ -36,6 +36,9 @@ clean:
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.2  1997/05/23 00:35:09  curt
+# Trying to get fog to work ...
+#
 # Revision 1.1  1997/05/16 15:51:13  curt
 # Initial revision.
 #
