--- a/FDM/Makefile
+++ b/FDM/Makefile
@@ -3,6 +3,22 @@
 #
 # Written by Curtis Olson, started May 1997.
 #
+# Copyright (C) 1997  Curtis L. Olson  - curt@infoplane.com
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+#
 # $Id$
 # (Log is kept at end of this file)
 #---------------------------------------------------------------------------
@@ -50,6 +66,9 @@ slew.o: slew.c slew.h flight.h ../aircraft/aircraft.h ../controls/controls.h
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.2  1997/05/23 15:40:36  curt
+# Added GNU copyright headers.
+#
 # Revision 1.1  1997/05/16 16:04:44  curt
 # Initial revision.
 #
