--- a/Main/Makefile
+++ b/Main/Makefile
@@ -3,6 +3,22 @@
 #
 # Written by Curtis Olson, started May 1997.
 #
+# Copyright (C) 1997  Curtis L. Olson  - curt@infoplane.com
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+#
 # $Id$
 # (Log is kept at end of this file)
 #---------------------------------------------------------------------------
@@ -86,6 +102,10 @@ mesh2GL.o: mesh2GL.c ../scenery/mesh.h
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.4  1997/05/23 15:40:26  curt
+# Added GNU copyright headers.
+# Fog now works!
+#
 # Revision 1.3  1997/05/23 00:35:13  curt
 # Trying to get fog to work ...
 #
