--- a/FDM/Makefile
+++ b/FDM/Makefile
@@ -50,7 +50,7 @@ $(TARGET): $(OFILES)
 all: $(TARGET)
 
 clean:
-	rm -f *.o $(TARGET) *~ core
+	rm -f *.o $(TARGET) lib*.a *~ core
 
 
 #---------------------------------------------------------------------------
@@ -66,6 +66,9 @@ flight.o: flight.c flight.h
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.5  1997/06/25 15:39:46  curt
+# Minor changes to compile with rsxnt/win32.
+#
 # Revision 1.4  1997/06/21 17:12:48  curt
 # Capitalized subdirectory names.
 #
