--- a/Slew/Makefile
+++ b/Slew/Makefile
@@ -30,8 +30,7 @@ CFILES = slew.c
 OFILES = $(CFILES:.c=.o)
 
 CC = gcc
-CFLAGS = -g -Wall
-# CFLAGS = -O2 -Wall
+CFLAGS = $(FG_CFLAGS)
 
 AR = ar
 
@@ -49,6 +48,9 @@ $(TARGET): $(OFILES)
 
 all: $(TARGET)
 
+dep:                                 
+	$(CC) -MM *.c > depend                     
+
 clean:
 	rm -f *.o $(TARGET) lib*.a *~ core
 
@@ -57,12 +59,17 @@ clean:
 # Secondary Targets
 #---------------------------------------------------------------------------
 
-slew.o: slew.c slew.h ../../Aircraft/aircraft.h ../../Controls/controls.h
+include depend
+
+slew.o:
 	$(CC) $(CFLAGS) $(INCLUDES) -c slew.c
 
 
 #---------------------------------------------------------------------------
 # $Log$
+# Revision 1.4  1997/06/26 19:08:31  curt
+# Restructuring make, adding automatic "make dep" support.
+#
 # Revision 1.3  1997/06/25 15:39:46  curt
 # Minor changes to compile with rsxnt/win32.
 #
